# net-log-filter

./: .gitignore  CMakeLists.txt
include/: log_filter.h
src/: log_filter.cpp  main.cpp
tests/: test_filter.cpp
